--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,30 +1,19 @@
-# Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
-# Initialization code that may require console input (password prompts, [y/n]
-# confirmations, etc.) must go above this block; everything else may go below.
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
-
-
 export EDITOR="nvim"
 
 # proxy
-## proxy () {
-##   export http_proxy="http://192.168.116.1:7890"
-##   export https_proxy=$http_proxy
-##   export socks5_proxy="socks5://192.168.116.1.1:7890"
-##   echo "HTTP Proxy on"
-## }
-##
-## # noproxy
-## noproxy () {
-##   unset http_proxy
-##   unset https_proxy
-##   echo "HTTP Proxy off"
-## }
+proxy () {
+   export http_proxy="http://172.16.156.1:7890"
+   export https_proxy=$http_proxy
+   export socks5_proxy="socks5://172.16.156.1.1:7890"
+   echo "HTTP Proxy on"
+}
 
-source ~/local
-
+# noproxy
+noproxy () {
+  unset http_proxy
+  unset https_proxy
+  echo "HTTP Proxy off"
+}
 
 function run_diso {
   sh -c "$@" &
@@ -229,6 +218,7 @@ alias  tgz='tar -xzvf'
 alias  zip='unzip'
 alias  bz2='tar -xjvf'
 alias  xz='tar -xzJf'
+alias dnf5='sudo dnf5'
 
 
 
