--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -9,6 +9,18 @@
 
 {{- $osID := .chezmoi.os -}}
 
+{{/* work around unreliable hostname on darwin */}}
+{{- $hostname := .chezmoi.hostname -}}
+{{- if eq .chezmoi.os "darwin" -}}
+{{-   $computerName := output "scutil" "--get" "ComputerName" | trim -}}
+{{-   if eq $computerName "zjp's MacBook Pro" -}}
+{{-     $hostname = "zjp's mbp" -}}
+{{-   else -}}
+{{-     $hostname = $computerName -}}
+{{-   end -}}
+{{- end -}}
+
+
 
 {{- if eq .chezmoi.os "windows" -}}
 {{-   $ephemeral = true -}}
