--- a/home/dot_config/waybar/style-light.css
+++ b/home/dot_config/waybar/style-light.css
@@ -5,11 +5,11 @@
 	font-family: Product Sans ,Arial, Helvetica, sans-serif;
 }
 window#waybar {
-	background-color: #353b49;
-	color: #d8dee9;
+	background-color: #eceff4;
+	color: #2e3440;
 }
 #workspaces {
-	background-color: #2e3440;
+	background-color: #d8dee9;
 	padding: 1px 5px 1px 5px;
 	font-size: 15px;
 	border-radius: 10px;
@@ -19,10 +19,10 @@ window#waybar {
 	border-radius: 0px;
 	margin: 0;
 	background-color: transparent;
-	color: #ffffff;
+	color: #2e3440;
 }
 #window {
-	color: #d8dee9;
+	color: #2e3440;
 	margin: 0px;
 	border-radius: 10px;
 	padding: 0px 6px 0px 6px;
@@ -50,7 +50,7 @@ window#waybar {
 }
 #mpd {
 	padding: 0px 10px;
-	color: #ffffff;
+	color: #2e3440;
 }
 /* TASKBAR */
 #taskbar {
@@ -60,7 +60,7 @@ window#waybar {
 	border-radius: 10px;
 	margin: 0px 5px 0px 5px;
 	padding: 0px 6px 0px 6px;
-	background-color: #2e3440;
+	background-color: #d8dee9;
 }
 #taskbar button.active {
 	background-color: #3b4252;
@@ -106,7 +106,7 @@ window#waybar {
 }
 /* WIDGETS */
 #cpu, #idle_inhibitor, #custom-pacman, #memory, #backlight, #disk, #network, #pulseaudio, #custom-weather, #temperature, #battery {
-	background-color: #2e3440;
+	background-color: #d8dee9;
 	padding: 0px 14px 0px 14px;
 	margin: 2px 0px 2px 0px;
 }
@@ -193,7 +193,7 @@ label:focus {
 	color: #ffffff;
 }
 #clock, #custom-power, #custom-recorder, #tray {
-	background-color: #3b4252;
+	background-color: #eceff4;
 	padding: 2px 10px 2px 10px;
 	margin: 2px 0px 2px 0px;
 }
