add qt5ct qt6ct,change chezmoi script

--- a/home/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -6,6 +6,11 @@ set -ev pipefail
 {{- if (eq .chezmoi.osRelease.id "fedora") -}}
 sudo dnf copr enable atim/starship
 {{ $packages := list
+  "adobe-source-han-serif-otc-fonts"
+  "imagemagick"
+  "catppuccin-gtk-theme-mocha"
+  "microsoft-edge-stable-bin"
+  "firefox"
   "flatpak"
   "fcitx5"
   "flameshot"
