--- a/home/dot_config/fish/config.fish.tmpl
+++ b/home/dot_config/fish/config.fish.tmpl
@@ -12,7 +12,7 @@ set -x EDITOR nvim
 set -U FZF_LEGACY_KEYBINDINGS 0
 
 
-{{- if not .ephemeral -}}
+{{- if not .is_vm -}}
 # proxy
 function proxy
    set -xg http_proxy "http://172.16.156.1:7890"
