--- a/home/.chezmoiscripts/linux/run_once_disable_selinux.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_once_disable_selinux.sh.tmpl
@@ -7,10 +7,10 @@
 {{ end }}
 
 # Check if running as root
-if [ "$(id -u)" -ne 0 ]; then
-    echo "Please run as root or use sudo." >&2
-    exit 1
-fi
+# if [ "$(id -u)" -ne 0 ]; then
+#     echo "Please run as root or use sudo." >&2
+#     exit 1
+# fi
 
 # Check current SELinux status
 current_status=$(getenforce)
